restructure java topics